Version 1.5: 2015-09-30
  - New: Python interface has visual capabilities.
  - New: Option for hexagonal grid.
  - New: Option for requesting compact support in updating the map.
  - New: Python, R, and MATLAB interfaces now allow passing an initial codebook.
  - Changed: Reduced memory use in calculating U-matrices.
  - Changed: Build system rebuilt and simplified.

Version 1.4.1: 2015-01-28
  - Better support for ICC.
  - Faster code when compiling with GCC.
  - Building instructions and documentation improved.
  - Bug fixes: portability for R, using native R random number generator.

Version 1.4: 2014-09-05
  - Better Windows support.
  - Completed CUDA support for Python and R interfaces.
  - Faster compilation by removing unnecessary flags for nvcc and support for CUDA 6.5.
  - Bug fixes: R version no longer needs separate code.

Version 1.3.1: 2014-04-10
  - Better I/O separation for the Python, R, and MATLAB interfaces.
  - Initial Windows support through GCC on Windows.
  - Bug fixes: major MPI initialization bug fixed.
  
Version 1.3: 2014-03-31

  - Learning rate parameter included.
  - Linear and exponential cooling strategies added for radius and learning rate.
  - CLI interface made more user-friendly.
  - Default radius depends on both X and Y of the map.
  - Bug fixes: CUDA build without MPI, best matching unit passing without MPI, 
    coordinate order in best matching unit file.
  - Python, R, and MATLAB interfaces added.

Version 1.2: 2013-12-17

  - Massive improvements in OpenMP parallelization.
  - MPI libraries are no longer mandatory.
  - Best matching units are saved.
  - Option for specifying an initial codebook for the map.
  - ESOM .lrn input format added.
  - Parsing of white-space characters corrected.
  - Long-named command line switches for specifying SOM dimensions.
  - Fine-grained control of which interim files to save across epochs
  - Option in Makefile for building shared library.
  
Version 1.1.2: 2013-11-28
